Uploaded image for project: 'IMPALA'
  1. IMPALA
  2. IMPALA-1442

Thrift w/sasl does not use buffered transport

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • Impala 2.0
    • Impala 2.0.1
    • None
    • None

    Description

      If you look at the packet stream from an Impala demon running an authenticated Thrift server, you will notice that a lot of the packets are very small (a few bytes). This is probably because Thrift servers that run with Sasl use the TSaslServerTransport directly over a TSocket, rather than wrapping an intermediate TBufferedServerTransport. We need to create a new factory class that creates a buffered server transport followed by a TSaslServerTransport.

      This has a significant effect on network throughput in Kerberized clusters.

      Attachments

        Activity

          People

            henryr Henry Robinson
            henryr Henry Robinson
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: