IMPALA-1442: Ensure that Thrift transports are always buffered

Secure transports using SASL would not be buffered, leading to poor
throughput. This patch ensures that we always buffer output, no matter
what the 'top'-level transport in the stack.

Change-Id: I4f5742292e7340f20538af6eea28c0a3272bcc49
Reviewed-on: http://gerrit.sjc.cloudera.com:8080/5064
Tested-by: jenkins
Reviewed-by: Henry Robinson <henry@cloudera.com>
(cherry picked from commit 17642fb3e40de4593f0a928cf0f8e3e482626b25)
Reviewed-on: http://gerrit.sjc.cloudera.com:8080/5123